--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@
 11. Media
 
 -------------------------------------------------------------------------*/
-/* 1. Ogólne */
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -54,6 +53,84 @@ body {
   max-width: 1400px;
 }
 
+.top {
+  position: absolute;
+  top: 0;
+}
+
+.back {
+  position: relative;
+}
+
+.back__link {
+  position: absolute;
+  left: 0;
+  text-decoration: none;
+  color: #000;
+  width: 100%;
+  background-color: grey;
+  font-size: 1.2rem;
+  padding: 10px;
+}
+
+.back .top {
+  top: 0;
+}
+
+.back .down {
+  bottom: 0;
+}
+
+.back .fas {
+  margin: 0 30px;
+  -webkit-transition: 1s;
+  transition: 1s;
+  font-size: 1.5rem;
+}
+
+.back__link:hover .fas {
+  color: #fff;
+  margin-left: 0px;
+}
+
+.photos {
+  padding: 40px;
+}
+
+.photo__title {
+  padding: 20px;
+  font-size: 2rem;
+  text-align: left;
+  width: 100%;
+}
+
+.photo__title:after {
+  content: "";
+  width: 95%;
+  border-bottom: 3px solid #c2000b;
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.photo__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.photo__img {
+  height: 40vh;
+  width: 40vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 5px;
+  border-radius: 10px;
+}
+
 /* 2. Nawigacja  */
 .menu__not-burger {
   display: -webkit-box;
@@ -81,6 +158,7 @@ body {
 .menu__list {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
+  text-align: center;
 }
 
 .menu__link {
@@ -104,6 +182,7 @@ body {
   position: fixed;
   top: 0;
   right: 0;
+  color: #c2000b;
   text-align: center;
   line-height: 70px;
   font-size: 1.5em;
@@ -239,7 +318,6 @@ body {
 
 /* Oferta */
 .offer {
-  /* kiedy dodanie zostanie klasa addLine dodać after */
   /* Dodawana klasa po kliknięciu + */
 }
 
@@ -276,18 +354,10 @@ body {
   transition: all .2s linear;
 }
 
-.offer__text:hover {
-  margin-left: 20px;
-}
-
 .offer .addLine {
   background-color: grey;
   color: #fff;
   font-size: 3rem;
-}
-
-.offer .addLine:hover .offer__text {
-  margin-left: 0px;
 }
 
 .offer__show {
@@ -407,7 +477,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100vh;
   text-align: center;
 }
 
@@ -418,10 +487,8 @@ body {
 
 .promo__promotion {
   font-size: 2rem;
-  height: 100vh;
   background-color: rgba(255, 255, 255, 0.5);
   line-height: 150%;
-  padding: 30px 0;
 }
 
 .promo__actual-offer {
@@ -440,7 +507,6 @@ body {
 }
 
 .promo__time {
-  margin-top: 30px;
   padding: 25px 0;
   font-size: 3rem;
   font-weight: bold;
@@ -489,6 +555,8 @@ body {
 }
 
 .gallery__text {
+  display: block;
+  text-decoration: none;
   opacity: 0;
   height: 100%;
   width: 100%;
@@ -585,6 +653,12 @@ body {
     background-color: #c2000b;
     -webkit-transition: .3s;
     transition: .3s;
+  }
+  .offer__text:hover {
+    margin-left: 20px;
+  }
+  .addLine:hover .offer__text {
+    margin-left: 0;
   }
   .gallery__face:hover .gallery__text,
   .gallery__body:hover .gallery__text,
@@ -691,15 +765,25 @@ body {
     display: block;
     z-index: 10;
   }
-  .menu #carousel {
+  .menu__list img {
+    height: 100%;
+    width: 50%;
+  }
+  #carousel {
     top: 0;
   }
-  .menu .about {
+  .about {
     margin: 30px auto;
   }
 }
 
-@media (max-width: 900px) and (max-width: 810px) {
+@media (max-width: 810px) {
+  .offer__text {
+    font-size: 1.2rem;
+  }
+  .offer__treatment {
+    font-size: 1.1rem;
+  }
   .contact__box {
     font-size: 1.5rem;
   }
@@ -723,12 +807,15 @@ body {
   }
 }
 
-@media (max-width: 900px) and (max-width: 690px) {
+@media (max-width: 690px) {
   .about-box__school {
     font-size: .9rem;
   }
   .offer__not-found {
     padding: 0 25px;
+  }
+  .offer__epil-name {
+    margin: 0;
   }
   .contact .wrapper {
     -webkit-box-orient: vertical;
@@ -770,7 +857,7 @@ body {
   }
 }
 
-@media (max-width: 900px) and (max-width: 640px) {
+@media (max-width: 640px) {
   .offer__treatment {
     letter-spacing: 1px;
     font-size: 1em;
@@ -800,7 +887,10 @@ body {
   }
 }
 
-@media (max-width: 900px) and (max-width: 590px) {
+@media (max-width: 590px) {
+  .offer__name {
+    margin: 10px 50px 10px 10px;
+  }
   .offer__treatment-box p {
     padding: 0 10px;
   }
@@ -836,7 +926,7 @@ body {
   }
 }
 
-@media (max-width: 900px) and (max-width: 490px) {
+@media (max-width: 490px) {
   .offer__name {
     padding: 10px;
   }
@@ -911,7 +1001,7 @@ body {
   }
 }
 
-@media (max-width: 900px) and (max-width: 440px) {
+@media (max-width: 440px) {
   .about {
     margin: 0 20px;
   }
@@ -956,7 +1046,7 @@ body {
   }
 }
 
-@media (max-width: 900px) and (max-width: 360px) {
+@media (max-width: 360px) {
   .gallery__text {
     line-height: 40vh;
     font-size: 1.6rem;
@@ -966,7 +1056,7 @@ body {
   }
 }
 
-@media (max-width: 900px) and (max-width: 340px) {
+@media (max-width: 340px) {
   .about .about-box__img {
     border: 1px solid #c2000b;
   }
