--- a/css/style.css
+++ b/css/style.css
@@ -318,11 +318,12 @@ body {
 
 /* Oferta */
 .offer {
+  width: 100%;
   /* Dodawana klasa po kliknięciu + */
 }
 
 .offer__treatments {
-  width: 80%;
+  width: 60%;
   padding: 0 20px;
   margin: 0 auto;
 }
@@ -337,7 +338,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 5px 100px 5px 40px;
   -webkit-transition: .2s;
   transition: .2s;
 }
@@ -371,7 +371,6 @@ body {
   line-height: 150%;
   font-size: 1.5rem;
   display: none;
-  padding: 0 70px;
 }
 
 .offer__name--small {
@@ -397,7 +396,7 @@ body {
 
 .offer__note {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .offer__treatment-box {
@@ -407,29 +406,17 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 80%;
-  margin: 0 auto;
-  /* border-bottom: 1px solid grey; */
+  width: 85%;
+  margin: 10px auto;
 }
 
 .offer__treatment-box:nth-child(odd) {
-  /* border-bottom: 1px solid grey; */
   background-color: #ddd;
 }
 
 .offer__epil-name {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 5px 100px 5px 40px;
-  -webkit-transition: .2s;
-  transition: .2s;
+  width: 95%;
+  margin: 0 auto;
 }
 
 .offer__ipl .offer__ipl-name {
@@ -743,7 +730,7 @@ body {
     display: none;
     width: 100%;
     height: 100%;
-    background-color: rgba(128, 128, 128, 0.9);
+    background-color: rgba(255, 255, 255, 0.7);
   }
   .menu__not-burger--active {
     display: block;
@@ -866,10 +853,6 @@ body {
     width: 70%;
     line-height: 150%;
   }
-  .offer__treatment-box {
-    width: 100%;
-    /* border-bottom: 1px solid grey; */
-  }
   .offer__IPL .offer__name {
     padding: 0;
   }
@@ -888,12 +871,6 @@ body {
 }
 
 @media (max-width: 590px) {
-  .offer__name {
-    margin: 10px 50px 10px 10px;
-  }
-  .offer__treatment-box p {
-    padding: 0 10px;
-  }
   .voucher__box {
     display: block;
     font-size: 1.2rem;
@@ -927,9 +904,6 @@ body {
 }
 
 @media (max-width: 490px) {
-  .offer__name {
-    padding: 10px;
-  }
   .offer__treatment {
     width: 90%;
     margin: 0 auto;
@@ -938,14 +912,6 @@ body {
   .offer__not-found {
     width: 70%;
     line-height: 150%;
-  }
-  .offer__treatment-box {
-    width: 100%;
-    padding: 0 10px;
-    /* border-bottom: 1px solid grey; */
-  }
-  .offer__treatment-box p {
-    padding: 0 10px;
   }
   .contact .wrapper {
     -webkit-box-orient: vertical;
@@ -976,9 +942,6 @@ body {
     margin: 25px auto;
     font-size: 4rem;
   }
-  .promo {
-    height: 80vh;
-  }
   .promo .title--mod {
     padding: 10px 0;
   }
@@ -1006,7 +969,7 @@ body {
     margin: 0 20px;
   }
   .offer {
-    margin: 0;
+    margin: 0 10px;
     font-size: 1rem;
   }
   .offer__text {
