--- a/scss/style.scss
+++ b/scss/style.scss
@@ -185,9 +185,10 @@
 /* Oferta */
 
 .offer {
+  width: 100%;
 
   &__treatments {
-    width: 80%;
+    width: 60%;
     padding: 0 20px;
     margin: 0 auto;
   }
@@ -195,7 +196,6 @@
   &__name {
     @include flex(space-between);
     align-items: center;
-    margin: 5px 100px 5px 40px;
     transition: .2s;
   }
 
@@ -211,7 +211,6 @@
   }
 
   .addLine {
-    // border-bottom: 2px solid $color-main;
     background-color: grey;
     color: $color-white;
     font-size: 3rem;
@@ -228,7 +227,6 @@
     line-height: 150%;
     font-size: 1.5rem;
     display: none;
-    padding: 0 70px;
   }
 
   &__name--small {
@@ -240,7 +238,6 @@
   &--is-active {
     display: block;
   }
-
 
   &__not-found {
     text-align: center;
@@ -256,37 +253,31 @@
 
   &__note {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
   }
 
   &__treatment-box {
     @include flex(space-between);
-    width: 80%;
-    margin: 0 auto;
-    /* border-bottom: 1px solid grey; */
+    width: 85%;
+    margin: 10px auto;
   }
 
   &__treatment-box:nth-child(odd) {
-    /* border-bottom: 1px solid grey; */
     background-color: #ddd;
   }
 
   &__epil-name {
-    @include flex(space-between);
-    align-items: center;
-    margin: 5px 100px 5px 40px;
-    transition: .2s;
+    width: 95%;
+    margin: 0 auto;
   }
 
   &__ipl .offer__ipl-name {
     @include flex(space-between);
     width: 85%;
-    // border-bottom: 1px solid grey;
     margin: 0 auto;
   }
 
   &__ipl .offer__ipl-name:nth-child(odd) {
-    // border-bottom: 1px solid grey;
     background-color: #ddd;
   }
 }
@@ -472,7 +463,6 @@
   }
 }
 
-
 // Media 
 
 // hover
@@ -598,8 +588,8 @@
       display: none;
       width: 100%;
       height: 100%;
-      // background-color: rgba(255, 255, 255, .7);
-      background-color: rgba(128, 128, 128, .9);
+      background-color: rgba(255, 255, 255, .7);
+      // background-color: rgba(128, 128, 128, .9);
     }
 
     &__not-burger--active {
@@ -740,11 +730,6 @@
       line-height: 150%;
     }
 
-    &__treatment-box {
-      width: 100%;
-      /* border-bottom: 1px solid grey; */
-    }
-
     &__IPL .offer__name {
       padding: 0;
     }
@@ -769,31 +754,15 @@
 }
 
 @media (max-width: 590px) {
-  .offer {
-
-    &__name {
-      margin: 10px 50px 10px 10px;
-    }
-
-    &__treatment-box p {
-      padding: 0 10px;
-    }
-  }
-
   .voucher {
     &__box {
-      // @include flex(space-between);
-      // flex-direction: column;
       display: block;
       font-size: 1.2rem;
       margin: 50px auto;
-      // width: 95%;
     }
 
     &__img {
       float: left;
-      // height: 50vw;
-      // width: 50%;
       margin-right: 10px;
     }
 
@@ -830,10 +799,6 @@
 @media (max-width: 490px) {
   .offer {
 
-    &__name {
-      padding: 10px;
-    }
-
     &__treatment {
       width: 90%;
       margin: 0 auto;
@@ -843,16 +808,6 @@
     &__not-found {
       width: 70%;
       line-height: 150%;
-    }
-
-    &__treatment-box {
-      width: 100%;
-      padding: 0 10px;
-      /* border-bottom: 1px solid grey; */
-    }
-
-    &__treatment-box p {
-      padding: 0 10px;
     }
   }
 
@@ -879,7 +834,6 @@
   }
 
   .promo {
-    height: 80vh;
 
     .title--mod {
       padding: 10px 0;
@@ -914,7 +868,7 @@
   }
 
   .offer {
-    margin: 0;
+    margin: 0 10px;
     font-size: 1rem;
 
     &__text {
